Reformat util class #2;